# smelt

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
benches/: learners.rs
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/: king_county.csv  king_county_1k.csv  king_county_1k_utm.csv  meuse.csv
docs/: auditoria_motor_2026-07-01.md  auditoria_motor_2026-07-04.md  auditoria_motor_2026-07-05.md  auditoria_motor_2026-07-10.md  auditoria_motor_2026-07-17.md  causal_meta_learners_2026-07-03.md  code_review.md  email_grekousis.md  email_grekousis_overleaf.md  email_grekousis_response.md  estado_del_arte.md  fase0_progreso.md  fase1_progreso.md  fase2_progreso.md  fase3_progreso.md  missing_docs_2026-07-03.md  paper_strengthening_checklist.md  pm25_spatial_handoff.md  respuesta_equipo_feedback_v041.md  respuesta_equipo_filtros_v040.md  roadmap_checklist.md  security_audit.md  sparse_data_2026-07-03.md  wos_analysis.md  wos_queries.md
docs/WOS/: Q1_1.bib  Q1_2.bib  Q1_3.bib  Q1_4.bib  Q1_5.bib  Q2_1.bib  Q2_2.bib  Q2_3.bib  Q2_4.bib  Q3_1.bib  Q3_2.bib  Q3_3.bib  Q4_1.bib  Q4_2.bib  Q4_3.bib  Q4_4.bib  Q5_1.bib  Q5_2_citas.bib  Q5_2_nuevos.bib  Q5_3.bib  Q6_1.bib  Q6_2_citas.bib  Q6_2_nuevos.bib  Q6_3.bib  Q6_4_citas.bib  Q6_4_nuevos.bib  Q7_1.bib  Q7_2.bib  Q7_3_citas.bib  Q7_3_nuevos.bib  Q7_4.bib  Q7_5.bib
examples/: ablation_study.rs  accuracy_validation.rs  basic_classification.rs  bench_vectorization.rs  benchmark_large.rs  benchmark_prediction.rs  case_study_king_county.rs  case_study_spatial.rs  catboost_categoricals.rs  conformal_prediction.rs  gis_workflow.rs  mem_bench.rs  pm25_spatial_loso.rs  profile_catboost.rs  profile_lightgbm.rs  profile_scaling.rs  regression_pipeline.rs  spatial_ml.rs  validate_geoxgboost.rs  xgboost_tuning.rs
paper/: article.aux  article.bbl  article.blg  article.docx  article.out  article.tex  cover_letter.md  draft.md  peer_review_simulation.md  refs.bib
paper/replication/: README.md  accuracy_sklearn.py  benchmark_cpp.py  benchmark_cpp_results.json  benchmark_rust_cooled.sh  benchmark_rust_results.json  compare_results.py  comparison_tables.txt  conformal_intervals.py  demo_geoxgboost.py  geoxgb_test_idx.csv  geoxgb_test_preds.csv  geoxgb_train_idx.csv  geoxgb_validation.json  local_importance_map.py  plot_scaling.py  prediction_sklearn.py  replicate.sh  smelt_geoxgb_test_preds.csv  smelt_xgb_test_preds.csv  statistical_analysis.py  validate_geoxgboost.py  xgb_test_preds.csv
smelt-py/: Cargo.toml  pyproject.toml
smelt-py/python/smelt/: __init__.py  benchmark.py  conformal.py  filters.py  spatial.py  stats.py  tuning.py
smelt-py/src/: auto_tuner.rs  causal.rs  cluster.rs  common.rs  conformal.rs  data.rs  feature_selection.rs  lib.rs  measures.rs  preprocess.rs  py_stats.rs  resample.rs  tuning.rs
smelt-py/src/learners/: boosting.rs  ensemble.rs  linear.rs  misc.rs  mod.rs  trees.rs
smelt-py/tests/: test_smoke.py
src/: benchmark.rs  benchmark_design.rs  error.rs  lib.rs  serialize.rs  sparse.rs  stats.rs  validate.rs
src/causal/: mod.rs
src/causal/meta_learners/: cross_fit.rs  dr_learner.rs  mod.rs  r_learner.rs  s_learner.rs  t_learner.rs  x_learner.rs
src/cluster/: isolation_forest.rs  mod.rs
src/conformal/: cqr.rs  mod.rs
src/data/: mod.rs  parquet.rs
src/importance/: mod.rs  shap.rs
src/learner/: adaboost.rs  adaptive_rf.rs  auto_tuner.rs  bagging.rs  calibration.rs  catboost.rs  cost_sensitive.rs  deep_forest.rs  des.rs  ebm.rs  elm.rs  eval.rs  gaussian_process.rs  geo_xgboost.rs  hist_pool.rs  histogram.rs  hoeffding.rs  kernel_svm.rs  knn.rs  kriging_hybrid.rs  lightgbm.rs  linear_regression.rs  logistic_regression.rs  math.rs  mod.rs  mondrian.rs  naive_bayes.rs  oblique.rs  properties.rs  quantile.rs  quantile_forest.rs  registry.rs  regularized.rs  stacking.rs  svm.rs  target_transform.rs  threshold.rs  xgboost.rs
src/learner/tree/: decision_tree.rs  extra_trees.rs  gradient_boosting.rs  mod.rs  random_forest.rs
src/measure/: mod.rs
src/multilabel/: mod.rs
src/multioutput/: mod.rs
src/prediction/: mod.rs
src/preprocess/: adasyn.rs  encoder.rs  filter.rs  imputer.rs  label_encoder.rs  mod.rs  mutual_info.rs  pca.rs  pipeline.rs  rfe.rs  scaler.rs  smote.rs  spatial_smote.rs
src/resample/: mod.rs  spatial.rs  stratified.rs  time_series.rs
src/survival/: cox.rs  mod.rs
src/task/: mod.rs
src/tuning/: bayesian.rs  grid_search.rs  hyperband.rs  mod.rs  random_search.rs  terminator.rs
tests/: catboost_perf.py  catboost_perf.rs  contract.rs  integration.rs  lightgbm_perf.py  lightgbm_perf.rs  real_benchmark.py  real_benchmark.rs  serialize_all_variants.rs  weights.rs  weights_boosting.rs  weights_linear.rs  weights_trees.rs  xgboost_comparison.py  xgboost_perf.py  xgboost_perf.rs  xgboost_vs_official.rs
