[workspace]
members = [".", "smelt-py"]

[package]
name = "smelt-ml"
version = "3.1.0"
edition = "2024"
authors = ["Francisco Parra <francisco.parra.o@usach.cl>"]
description = "Machine learning framework with spatial modeling, conformal prediction, and gradient boosting competitive with C++"
license = "MIT"
repository = "https://github.com/franciscoparrao/smelt"
keywords = ["machine-learning", "gradient-boosting", "spatial", "conformal-prediction", "xgboost"]
categories = ["science", "algorithms"]
readme = "README.md"
# Also excluded: paper-workflow strays that live in the repo root/docs but
# have no place inside the published crate (spreadsheets, LaTeX logs, PDFs).
exclude = [
    "docs/WOS/",
    "docs/*.pdf",
    "tests/xgboost_*.py",
    "tests/real_benchmark.py",
    "paper/",
    "/data/",
    "*.xlsx",
    "*.log",
    "Predict_results.csv",
]

[dependencies]
ndarray = { version = "0.16", features = ["serde"] }
rand = "0.9"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
# float_roundtrip: without it serde_json's float PARSING can be off by a few
# ulps, so a saved model's weights (and therefore its predictions) silently
# drift across a save/load roundtrip — caught by tests/serialize_all_variants.rs.
serde_json = { version = "1", features = ["float_roundtrip"] }
csv = "1"
rayon = "1.10"
polars = { version = "0.54.4", default-features = false, features = ["parquet"], optional = true }

[profile.release]
lto = true
codegen-units = 1

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "learners"
harness = false

[features]
parquet = ["dep:polars"]
