[workspace]
members = [".", "smelt-py"]

[package]
name = "smelt-ml"
version = "3.2.0"
edition = "2024"
authors = ["Francisco Parra <francisco.parra.o@usach.cl>"]
description = "Machine learning framework with spatial modeling, conformal prediction, and gradient boosting competitive with C++"
license = "MIT"
repository = "https://github.com/franciscoparrao/smelt"
keywords = ["machine-learning", "gradient-boosting", "spatial", "conformal-prediction", "xgboost"]
categories = ["science", "algorithms"]
readme = "README.md"
# include-list (not exclude): the published crate carries ONLY the code and
# top-level docs below. The old exclude-list approach let private strays leak
# into the crate as the repo grew (internal audits, private correspondence in
# docs/, tests/*.py benchmark drivers — audit 5a, M-9); an allow-list is
# robust against future strays by construction. Cargo adds Cargo.toml,
# Cargo.lock and .cargo_vcs_info.json on its own. `tests/*.rs` (not
# `tests/`) keeps the Python perf drivers out; no test/example reads a
# repo-relative data file, so nothing else is needed at package time.
include = [
    "src/",
    "tests/*.rs",
    "examples/",
    "benches/",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

[dependencies]
ndarray = { version = "0.16", features = ["serde"] }
rand = "0.9"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
# float_roundtrip: without it serde_json's float PARSING can be off by a few
# ulps, so a saved model's weights (and therefore its predictions) silently
# drift across a save/load roundtrip — caught by tests/serialize_all_variants.rs.
serde_json = { version = "1", features = ["float_roundtrip"] }
csv = "1"
rayon = "1.10"
polars = { version = "0.54.4", default-features = false, features = ["parquet"], optional = true }

[profile.release]
lto = true
codegen-units = 1

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "learners"
harness = false

[features]
parquet = ["dep:polars"]
