[package]
name = "smelt-py"
version = "0.5.1"
edition = "2024"
authors = ["Francisco Parra <francisco.parra.o@usach.cl>"]
description = "Python bindings for smelt-ml (Rust ML framework)"
license = "MIT"

[lib]
name = "_smelt"
crate-type = ["cdylib"]

[dependencies]
smelt-ml = { path = ".." }
pyo3 = { version = "0.24", features = ["extension-module", "multiple-pymethods", "abi3-py38"] }
numpy = "0.24"
ndarray = "0.16"

[features]
# Mirrors smelt-ml's own `parquet` feature (pulls in polars, ~200 transitive
# crates) -- opt-in, not on by default, so a plain `maturin develop` build
# stays fast; enable with `maturin develop --features parquet`.
parquet = ["smelt-ml/parquet"]
