[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "smelt-ml"
version = "0.5.0"
description = "Python bindings for smelt-ml: spatial ML + conformal prediction + fast gradient boosting"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "Francisco Parra", email = "francisco.parra.o@usach.cl" }]
keywords = ["machine-learning", "gradient-boosting", "spatial", "conformal-prediction", "rust"]
dependencies = ["numpy>=1.20"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "smelt._smelt"
